2002-09-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/tab-staff.ly: removed.
	
	* lily/paper-def.cc (find_font): load virtual font for a list of
	font names.

	* scm/font.scm (paper20-style-sheet-alist): equate ancient and
	music font-families.

	* lily/virtual-font-metric.cc (get_char_molecule): new function

	* lily/system-start-delimiter.cc (staff_brace): use virtual fonts
	for the list of braces

	* lily/font-metric.cc (get_char_molecule): new function.

2002-08-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/virtual-font-metric.cc: new file

	* lily/include/virtual-font-metric.hh (class Virtual_font_metric):
	new file

	* scripts/lilypond-book.py: use old re's for python 2.2 as well

	* debian/control: Debian patches by Anthony Fok

	* input/regression/lyric-combine-polyphonic.ly: new file.

	* ly/engraver-init.ly (VoiceContext): add Grob_pq_engraver to
	Voice context.

2002-08-31 Graham Percival  <gperciva@sfu.ca>

        * Documentation/user/tutorial.itely:  editorial changes
	(spelling, grammar, etc) of the orchestral score, integrating text +
	music, and the end of tutorial.

2002-08-31 Rune Zedeler  <rune@zedeler.dk>

	* input/test/sondag-morgen/*.ly: 1.6 compatibility knee fixes

	* lily/tab-note-heads-engraver.cc: Bugfix for instruments not
	having 6 strings.
	
2002-08-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.6.1 released
	
	* lily/kpath.cc: 
	* lily/lily-guile.cc: macosx fixes.

	* lily/script-column.cc (before_line_breaking): use stable sorting
	algorithm to preserve script ordering.
	(grob_script_priority_less): new function

	* lily/script-engraver.cc (process_music): 
	* lily/text-engraver.cc (process_acknowledged_grobs):
	* lily/fingering-engraver.cc (make_script): don't use direction
	for script-priority. This fixes orderings for multiple down
	script/fingering.

	* scripts/ly2dvi.py (run_lilypond): don't exit if LilyPond fails,
	but try to assemble the files anyway.
