@@ -16,14 +16,6 @@
  * "rhythmic-head-interface" in the interfaces list.  Otherwise, text
  * scripts (such as fermata) are horizontally aligned with the end of
  * the ligature rather than with the associated head.  Why?
- *
- * TODO: if properties font-family and style are not set properly
- * (e.g. by a user erronously setting font-family to #'music),
- * lilypond currently crashes with the message: "lilypond:
- * ../flower/include/interval.hh:28: Real Interval_t<double>::center()
- * const: Assertion `!empty_b ()' failed.".  The code of this class
- * should be clever enough to foresee a potential crash, print a
- * warning, and supply sensible default values that avoid the crash.
  */
 MAKE_SCHEME_CALLBACK (Ligature_head,brew_molecule,1);
 SCM
